# kpopsocblamelucabot

./: .gitignore  config.json  data.db  data.json  keep_alive.py  main.py  pyproject.toml
blame/: config.json  data.db
